temp.txt
>>> (V7.0) Tải logic.data_repository (Tải dữ liệu) thành công.
Đã tải cài đặt từ config.json
ConfigManager đã khởi tạo và tải cài đặt.
>>> (V6.0) Tải logic.ml_model (AI) thành công.
Lottery Service API (lottery_service.py) đã tải thành công (V7.2 MP).
Traceback (most recent call last):
  File "C:\Users\KAKA\Documents\27loto\code1\main_app.py", line 9, in <module>
    from ui.ui_main_window import DataAnalysisApp
  File "C:\Users\KAKA\Documents\27loto\code1\ui\ui_main_window.py", line 21, in <module>
    from app_controller import AppController
  File "C:\Users\KAKA\Documents\27loto\code1\app_controller.py", line 732
    output += f"{'Đầu'.ljust(COL_DAU_W)} | {'Loto'.ljust(COL_LOTO_W)} | {'Đuôi'.ljust(COL_DUOI_W)} | {'Loto'.loto_W)}\n"
                                                                                                                   ^
SyntaxError: f-string: unmatched ')'
[Finished in 1.6s]